...
import UIKit

class ViewController: UIViewController,UITextFieldDelegate{
    
    var reverseManager = ReverseManager()
    
    @IBOutlet weak var inputTextField: UITextField!
    @IBOutlet weak var reverseButton: UIButton!
    @IBOutlet weak var reversedTextLabel: UILabel!
    
    
    var state = State.reverse
    
    override func viewDidLoad() {
...
